[workspace]
members = [
    ".",
    "radmin-macro",
    "radmin-generator",
    "radmin-util",
    "radmin-conf"
]

[package]
name = "radmin"
version = "0.1.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radmin-macro = { path = "radmin-macro" }
radmin-conf = { path = "radmin-conf" }
radmin-util = { path = "radmin-util" }

# jwt
jsonwebtoken = "7.2.0"
# actix
actix-web = "3.3.2"
actix-service = "1.0.6"
actix-cors = "0.4.0"
actix-rt = "1.1.1"
actix-files = "0.3.0"
actix-multipart = "0.3.0"
sanitize-filename = "0.3.0"
actix-http = "2.2.0"
actix-session = "0.4.0"
# 异步
futures = "0.3.8"
futures-util = "0.3.8"
# 模板引擎
tera = "1.5.0"
lazy_static = "1.4.0"
#
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.116"
# 时间日期处理
chrono = { version = "0.4.18", features = ["serde"] }
# 日志记录
log = "0.4.11"
fast_log = "1.2.3"
# env_logger = "0.7.1"
# BigDecimal支持
bigdecimal = "0.2.0"
# rbatis数据库支持
rbatis-core = "1.8.52"
rbatis = { version = "1.8.52", features = ["snowflake"] }
rbatis-macro-driver = "1.8.52"
# redis
redis = "0.17.0"
# base64编码
base64 = "0.12.3"
# 图像处理
image = "0.23.10"
# 验证码
captcha = "0.0.7"
# uuid
uuid = { version = "0.8.1", features = ["serde", "v4"] }
# 参数验证
validator = { version = "0.12.0", features = ["derive"] }
# RSA加密算法
rsa = "0.3.0"
rand = "0.7.3"
# zip
zip = "0.5.8"
# 邮箱
lettre = "0.10.0-alpha.4"
# excel
simple_excel_writer = "0.1.7"
# 错误
anyhow = "1.0.35"
thiserror = "1.0.22"
derive_more = "0.99.11"
# trait支持异步
async-trait = "0.1.42"

