[package]
name = "radmin-conf"
version = "0.1.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
lazy_static = "1.4.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
toml = "0.5.8"
