[package]
name = "radmin-generator"
version = "0.1.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json支持
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"

# 日期支持(必须)
chrono = { version = "0.4.19", features = ["serde"] }

# rbatis支持，版本保持一致
rbatis = "1.8.55"
rbatis-macro-driver = "1.8.55"

# log日志支持
log = "0.4.11"
fast_log = "1.3.14"

# BigDecimal支持
bigdecimal = "0.2.0"

# 异步支持
async-std = "1.8.0"

# 错误传播
anyhow = "1.0.37"

# 静态变量
lazy_static = "1.4.0"

# 模板引擎
tera = "1.6.1"

# 大小写转换
heck = "0.3.2"
