[package]
name = "radmin-macro"
version = "0.1.0"
authors = ["pujq <2190975784@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.55", features = ["full"] }
quote = "1.0.8"
anyhow = "1.0.36"